fix the alignment of the claim button, add edit button is ManageExp, remoce expidin data model (replaced by exp_partid)

--- a/front/src/ManageExps/ManageExps.css
+++ b/front/src/ManageExps/ManageExps.css
@@ -66,3 +66,10 @@
     text-align: center;
     padding: 15px;
 }
+
+.ManageApp-claim-expname{
+    border: 1px solid #ddd;
+    max-width: 600px; 
+    text-align: left;
+    padding: 15px;
+}
